i965: Use render pipeline state to determine when to re-emit URB

Instead of looking at ctx->brw.NewDriverState, which may be stale
depending on whether or not a compute pipeline was run right before you,
look at the render pipeline state directly.  This fixes an issue where
blorp gets run right after a compute job and doesn't re-emit URB even
though the L3$ allocation changed.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=102289